Proofread: 07-TextSplitter / 03-TextSplittingMethods

--- a/07-TextSplitter/03-TextSplittingMethods.ipynb
+++ b/07-TextSplitter/03-TextSplittingMethods.ipynb
@@ -166,9 +166,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Basic Usage of tiktoken\n",
+        "## Basic Usage of `tiktoken`\n",
         "\n",
-        "`tiktoken` is a fast BPE tokenizer created by OpenAI.\n",
+        "tiktoken is a fast BPE tokenizer created by OpenAI.\n",
         "\n",
         "- Open the file ./data/appendix-keywords.txt and read its contents.\n",
         "- Store the read content in the file variable."
@@ -224,9 +224,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Use the `CharacterTextSplitter` to split the text.\n",
+        "Use the CharacterTextSplitter to split the text.\n",
         "\n",
-        "- Initialize the text splitter using the `from_tiktoken_encoder` method, which is based on the Tiktoken encoder."
+        "- Initialize the text splitter using the from_tiktoken_encoder method, which is based on the Tiktoken encoder."
       ]
     },
     {
@@ -329,7 +329,7 @@
       "source": [
         "## Basic Usage of `TokenTextSplitter`\n",
         "\n",
-        "Use the `TokenTextSplitter` class to split the text into token-based chunks."
+        "Use the TokenTextSplitter class to split the text into token-based chunks."
       ]
     },
     {
@@ -379,11 +379,11 @@
       "source": [
         "## Basic Usage of `spaCy`\n",
         "\n",
-        "`spaCy` is an open-source software library for advanced natural language processing, written in Python and Cython programming languages.\n",
+        "spaCy is an open-source software library for advanced natural language processing, written in Python and Cython programming languages.\n",
         "\n",
-        "Another alternative to NLTK is using the `spaCy` tokenizer.\n",
+        "Another alternative to NLTK is using the spaCy tokenizer.\n",
         "\n",
-        "1. How the text is divided: The text is split using the `spaCy` tokenizer.\n",
+        "1. How the text is divided: The text is split using the spaCy tokenizer.\n",
         "2. How the chunk size is measured: It is measured by the number of characters."
       ]
     },
@@ -469,7 +469,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Create a text splitter using the `SpacyTextSplitter` class.\n"
+        "Create a text splitter using the SpacyTextSplitter class.\n"
       ]
     },
     {
@@ -495,7 +495,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Use the `split_text` method of the `text_splitter` object to split the `file` text."
+        "Use the **split_text** method of the **text_splitter** object to split the `file` text."
       ]
     },
     {
@@ -546,9 +546,9 @@
       "source": [
         "## Basic Usage of `SentenceTransformers`\n",
         "\n",
-        "`SentenceTransformersTokenTextSplitter` is a text splitter specialized for `sentence-transformer` models.\n",
+        "SentenceTransformersTokenTextSplitter is a text splitter specialized for sentence-transformer models.\n",
         "\n",
-        "Its default behavior is to split text into chunks that fit within the token window of the `sentence-transformer` model being used.\n"
+        "Its default behavior is to split text into chunks that fit within the token window of the sentence-transformer model being used.\n"
       ]
     },
     {
@@ -680,7 +680,7 @@
         "Instead of simply splitting by \"\\n\\n\", NLTK can be used to split text based on NLTK tokenizers.\n",
         "1. Text splitting method: The text is split using the NLTK tokenizer.\n",
         "2.\tChunk size measurement: The size is measured by the number of characters.\n",
-        "3.\t`nltk` (Natural Language Toolkit) is a Python library for natural language processing.\n",
+        "3.\tnltk (Natural Language Toolkit) is a Python library for natural language processing.\n",
         "4.\tIt supports various NLP tasks such as text preprocessing, tokenization, morphological analysis, and part-of-speech tagging."
       ]
     },
@@ -688,9 +688,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Before using NLTK, you need to run `nltk.download('punkt_tab')`.\n",
+        "Before using NLTK, you need to run nltk.download('punkt_tab').\n",
         "\n",
-        "The reason for running `nltk.download('punkt_tab')` is to allow the NLTK (Natural Language Toolkit) library to download the necessary data files required for tokenizing text.\n",
+        "The reason for running nltk.download('punkt_tab') is to allow the NLTK (Natural Language Toolkit) library to download the necessary data files required for tokenizing text.\n",
         "\n",
         "Specifically, punkt_tab is a tokenization model capable of splitting text into words or sentences for multiple languages, including English."
       ]
@@ -771,8 +771,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "- Create a text splitter using the `NLTKTextSplitter` class.\n",
-        "- Set the `chunk_size` parameter to 1000 to split the text into chunks of up to 1000 characters."
+        "- Create a text splitter using the NLTKTextSplitter class.\n",
+        "- Set the chunk_size parameter to 1000 to split the text into chunks of up to 1000 characters."
       ]
     },
     {
@@ -793,7 +793,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Use the `split_text` method of the `text_splitter` object to split the `file` text."
+        "Use the split_text method of the text_splitter object to split the `file` text."
       ]
     },
     {
@@ -825,7 +825,7 @@
       "source": [
         "## Basic Usage of `KoNLPy`\n",
         "\n",
-        "`KoNLPy` (Korean NLP in Python) is a Python package for Korean Natural Language Processing (NLP).\n",
+        "KoNLPy (Korean NLP in Python) is a Python package for Korean Natural Language Processing (NLP).\n",
         "\n",
         "Tokenization involves the process of dividing text into smaller, more manageable units called tokens. \n",
         "These tokens often represent meaningful elements such as words, phrases, symbols, or other components crucial for further processing and analysis.\n",
@@ -837,16 +837,16 @@
         "\n",
         "### Korean Tokenization Using `KoNLPy`s `Kkma` Analyzer\n",
         "\n",
-        "For Korean text, `KoNLPy` includes a morphological analyzer called `Kkma` (Korean Knowledge Morpheme Analyzer).\n",
+        "For Korean text, KoNLPy includes a morphological analyzer called Kkma (Korean Knowledge Morpheme Analyzer).\n",
         "\n",
-        "`Kkma` provides detailed morphological analysis for Korean text.\n",
+        "Kkma provides detailed morphological analysis for Korean text.\n",
         "It breaks sentences into words and further decomposes words into their morphemes while identifying the part of speech for each token.\n",
         "It can also split text blocks into individual sentences, which is particularly useful for processing lengthy texts.\n",
         "\n",
         "### Considerations When Using `Kkma`\n",
-        "`Kkma` is known for its detailed analysis. However, this precision can affect processing speed.\n",
-        "Therefore, `Kkma` is best suited for applications that prioritize analytical depth over rapid text processing.\n",
-        "- `KoNLPy` is a Python package for Korean Natural Language Processing, offering features such as morphological analysis, part-of-speech tagging, and syntactic parsing."
+        "Kkma is known for its detailed analysis. However, this precision can affect processing speed.\n",
+        "Therefore, Kkma is best suited for applications that prioritize analytical depth over rapid text processing.\n",
+        "- KoNLPy is a Python package for Korean Natural Language Processing, offering features such as morphological analysis, part-of-speech tagging, and syntactic parsing."
       ]
     },
     {
@@ -890,7 +890,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "This is an example of splitting Korean text using `KonlpyTextSplitter`."
+        "This is an example of splitting Korean text using KonlpyTextSplitter."
       ]
     },
     {
@@ -909,7 +909,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Use the `text_splitter` to split the `file` content into sentences."
+        "Use the text_splitter to split the `file` content into sentences."
       ]
     },
     {
@@ -938,7 +938,7 @@
         "\n",
         "Hugging Face provides various tokenizers.\n",
         "\n",
-        "This code demonstrates calculating the token length of a text using one of Hugging Face's tokenizers, `GPT2TokenizerFast`.\n",
+        "This code demonstrates calculating the token length of a text using one of Hugging Face's tokenizers, GPT2TokenizerFast.\n",
         "\n",
         "The text splitting approach is as follows:\n",
         "\n",
@@ -947,8 +947,8 @@
         "The chunk size measurement is determined as follows:\n",
         "\n",
         "- It is based on the number of tokens calculated by the Hugging Face tokenizers.\n",
-        "- A tokenizer object is created using the `GPT2TokenizerFast` class.\n",
-        "- `from_pretrained` method is called to load the pre-trained `gpt2` tokenizer model."
+        "- A tokenizer object is created using the GPT2TokenizerFast class.\n",
+        "- from_pretrained method is called to load the pre-trained gpt2 tokenizer model."
       ]
     },
     {
@@ -997,7 +997,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "`from_huggingface_tokenizer` method is used to initialize a text splitter with a Hugging Face tokenizers (tokenizer)."
+        "from_huggingface_tokenizer method is used to initialize a text splitter with a Hugging Face tokenizers (tokenizer)."
       ]
     },
     {
