--- a/05-Memory/05-ConversationKGMemory.ipynb
+++ b/05-Memory/05-ConversationKGMemory.ipynb
@@ -205,7 +205,7 @@
       "id": "dfed7692",
       "metadata": {},
       "source": [
-        "### (Reference) get_topological_sort() -> List[str]\n",
+        "### (Reference) get_topological_sort() → List[str]\n",
         "\n",
         "You can use the ```get_topological_sort``` method to view all entities stored in the knowledge graph in topological order:\n",
         "\n",
