Proofread: [N-1] 07-Agent / 15-CoT-basedSmartWebSearch
- replace class backticks  to bold
- remove unintended code

--- a/19-Cookbook/07-Agent/15-CoT-basedSmartWebSearch.ipynb
+++ b/19-Cookbook/07-Agent/15-CoT-basedSmartWebSearch.ipynb
@@ -82,28 +82,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Install required packages\n",
-    "from langchain_opentutorial import package\n",
-    "\n",
-    "package.install(\n",
-    "    [\n",
-    "        \"langsmith\",\n",
-    "        \"langchain\",\n",
-    "        \"langchain_core\",\n",
-    "        \"langchain-anthropic\",\n",
-    "        \"langchain_community\",\n",
-    "        \"langchain_text_splitters\",\n",
-    "        \"langchain_openai\",\n",
-    "    ],\n",
-    "    verbose=False,\n",
-    "    upgrade=False,\n",
-    ")"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -209,10 +187,10 @@
     "\n",
     "This section establishes the foundations for the entire tutorial by defining the key data structures using `Pydantic`. Our workflow relies on these models to ensure consistent information flow:\n",
     "\n",
-    "- `TaskStep` tracks a single step (either *search*, *think*, or *respond*).  \n",
-    "- `TaskSteps` holds a list of such steps.  \n",
-    "- `SearchQuries`, `KeyInformation`, and `SearchResultData` model how we handle web search queries and their results.  \n",
-    "- `Reference`and `FinalResponse` describe how we finalize and format the output response, including references.\n",
+    "- **TaskStep** tracks a single step (either `search`, `think`, or `respond`).  \n",
+    "- **TaskSteps** holds a list of such steps.  \n",
+    "- **SearchQuries**, **KeyInformation**, and **SearchResultData** model how we handle web search queries and their results.  \n",
+    "- **Reference** and **FinalResponse** describe how we finalize and format the output response, including references.\n",
     "\n",
     "Using these data models enforces structure, making the entire process easier to debug and maintain."
    ]
@@ -327,8 +305,8 @@
     "\n",
     "We use two different states:\n",
     "\n",
-    "1. `AgentState`: Represents the overall flow of the conversation, including steps, search results, think results, and the final answer.  \n",
-    "2. `WorkerState`: Manages the current task at a more granular level (e.g., one node’s execution).\n",
+    "1. **AgentState** : Represents the overall flow of the conversation, including steps, search results, think results, and the final answer.  \n",
+    "2. **WorkerState** : Manages the current task at a more granular level (e.g., one node’s execution).\n",
     "\n",
     "This separation improves modularity and makes it simpler to track local vs. global information during a workflow run."
    ]
@@ -755,7 +733,7 @@
     "This portion of the tutorial shows how to:\n",
     "\n",
     "1. Decide which step should execute next (the task router).  \n",
-    "2. Build our entire workflow as a graph, using the `StateGraph` class.  \n",
+    "2. Build our entire workflow as a graph, using the **StateGraph** class.  \n",
     "3. Visualize the graph to confirm all nodes connect properly.  \n",
     "\n",
     "Combining these elements provides a clear flow from plan → search → optional think → respond, with conditionals for concurrency."
