Proofread: 07-TextSplitter / 03-TextSplittingMethods

--- a/07-TextSplitter/03-TextSplittingMethods.ipynb
+++ b/07-TextSplitter/03-TextSplittingMethods.ipynb
@@ -30,10 +30,10 @@
         "   - KoNLPy: Specialized splitting tool for Korean text processing\n",
         "\n",
         "Each tool has its unique characteristics and advantages:\n",
-        "- `Tiktoken` offers fast processing speed and compatibility with OpenAI models\n",
-        "- `SentenceTransformers` provides meaning-based sentence splitting\n",
-        "- `NLTK` and `spaCy` implement linguistic rule-based splitting\n",
-        "- `KoNLPy` specializes in Korean morphological analysis and splitting\n",
+        "- ```Tiktoken``` offers fast processing speed and compatibility with OpenAI models\n",
+        "- ```SentenceTransformers``` provides meaning-based sentence splitting\n",
+        "- ```NLTK``` and ```spaCy``` implement linguistic rule-based splitting\n",
+        "- ```KoNLPy``` specializes in Korean morphological analysis and splitting\n",
         "\n",
         "Through this tutorial, you will understand the characteristics of each tool and learn to choose the most suitable text splitting method for your project.\n",
         "\n",
@@ -65,8 +65,8 @@
         "Set up the environment. You may refer to [Environment Setup](https://wikidocs.net/257836) for more details.\n",
         "\n",
         "**[Note]**\n",
-        "- `langchain-opentutorial` is a package that provides a set of easy-to-use environment setup, useful functions and utilities for tutorials. \n",
-        "- You can checkout the [`langchain-opentutorial`](https://github.com/LangChain-OpenTutorial/langchain-opentutorial-pypi) for more details."
+        "- ```langchain-opentutorial``` is a package that provides a set of easy-to-use environment setup, useful functions and utilities for tutorials. \n",
+        "- You can checkout the [langchain-opentutorial](https://github.com/LangChain-OpenTutorial/langchain-opentutorial-pypi) for more details."
       ]
     },
     {
@@ -135,9 +135,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "You can alternatively set `OPENAI_API_KEY` in `.env` file and load it. \n",
+        "You can alternatively set ```OPENAI_API_KEY``` in ```.env``` file and load it. \n",
         "\n",
-        "[Note] This is not necessary if you've already set `OPENAI_API_KEY` in previous steps."
+        "[Note] This is not necessary if you've already set ```OPENAI_API_KEY``` in previous steps."
       ]
     },
     {
@@ -166,7 +166,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Basic Usage of `tiktoken`\n",
+        "## Basic Usage of ```tiktoken```\n",
         "\n",
         "tiktoken is a fast BPE tokenizer created by OpenAI.\n",
         "\n",
@@ -327,7 +327,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Basic Usage of `TokenTextSplitter`\n",
+        "## Basic Usage of ```TokenTextSplitter```\n",
         "\n",
         "Use the TokenTextSplitter class to split the text into token-based chunks."
       ]
@@ -377,7 +377,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Basic Usage of `spaCy`\n",
+        "## Basic Usage of ```spaCy```\n",
         "\n",
         "spaCy is an open-source software library for advanced natural language processing, written in Python and Cython programming languages.\n",
         "\n",
@@ -495,7 +495,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Use the **split_text** method of the **text_splitter** object to split the `file` text."
+        "Use the **split_text** method of the **text_splitter** object to split the ```file``` text."
       ]
     },
     {
@@ -544,7 +544,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Basic Usage of `SentenceTransformers`\n",
+        "## Basic Usage of ```SentenceTransformers```\n",
         "\n",
         "SentenceTransformersTokenTextSplitter is a text splitter specialized for sentence-transformer models.\n",
         "\n",
@@ -632,7 +632,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Use the `splitter.split_text()` function to split the text stored in the `text_to_split` variable into chunks."
+        "Use the ```splitter.split_text()``` function to split the text stored in the ```text_to_split``` variable into chunks."
       ]
     },
     {
@@ -673,7 +673,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Basic Usage of `NLTK`\n",
+        "## Basic Usage of ```NLTK```\n",
         "\n",
         "The Natural Language Toolkit (NLTK) is a library and a collection of programs for English natural language processing (NLP), written in the Python programming language.\n",
         "\n",
@@ -823,7 +823,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Basic Usage of `KoNLPy`\n",
+        "## Basic Usage of ```KoNLPy```\n",
         "\n",
         "KoNLPy (Korean NLP in Python) is a Python package for Korean Natural Language Processing (NLP).\n",
         "\n",
@@ -835,7 +835,7 @@
         "\n",
         "Tokenizers designed for English lack the ability to comprehend the unique semantic structure of other languages, such as Korean, and therefore cannot be effectively used for Korean text processing.\n",
         "\n",
-        "### Korean Tokenization Using `KoNLPy`s `Kkma` Analyzer\n",
+        "### Korean Tokenization Using ```KoNLPy```'s ```Kkma``` Analyzer\n",
         "\n",
         "For Korean text, KoNLPy includes a morphological analyzer called Kkma (Korean Knowledge Morpheme Analyzer).\n",
         "\n",
@@ -843,7 +843,7 @@
         "It breaks sentences into words and further decomposes words into their morphemes while identifying the part of speech for each token.\n",
         "It can also split text blocks into individual sentences, which is particularly useful for processing lengthy texts.\n",
         "\n",
-        "### Considerations When Using `Kkma`\n",
+        "### Considerations When Using ```Kkma```\n",
         "Kkma is known for its detailed analysis. However, this precision can affect processing speed.\n",
         "Therefore, Kkma is best suited for applications that prioritize analytical depth over rapid text processing.\n",
         "- KoNLPy is a Python package for Korean Natural Language Processing, offering features such as morphological analysis, part-of-speech tagging, and syntactic parsing."
@@ -909,7 +909,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Use the text_splitter to split the `file` content into sentences."
+        "Use the text_splitter to split the ```file``` content into sentences."
       ]
     },
     {
@@ -934,7 +934,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Basic Usage of `Hugging Face tokenizers`\n",
+        "## Basic Usage of ```Hugging Face tokenizers```\n",
         "\n",
         "Hugging Face provides various tokenizers.\n",
         "\n",
