--- a/09-VectorStore/09-Neo4j.ipynb
+++ b/09-VectorStore/09-Neo4j.ipynb
@@ -704,15 +704,15 @@
     "\n",
     "### Add items to vector store\n",
     "\n",
-    "We can add items to our vector store by using the ```upsert_documents``` or ```upsert_documents_parallel``` method.\n",
+    "We can add items to our vector store by using the ```upsert``` or ```upsert_parallel``` method.\n",
     "\n",
     "If you pass IDs along with documents, then IDs will be used. However if you do not pass IDs, they will be generated based ```page_content``` using **MD5** hash function.\n",
     "\n",
-    "Basically, ```upsert_document``` and ```upsert_document_parallel``` methods perform an upsert, not insert, based on **ID** of the item.\n",
+    "Basically, ```upsert``` and ```upsert_parallel``` methods perform an upsert, not insert, based on **ID** of the item.\n",
     "\n",
     "So if you provided an ID and want to update the data, you must use the same id that you provided at first upsertion.\n",
     "\n",
-    "We will upsert data to the index, ```tutorial_index```, using the ```upsert_documents``` method for the first half, and with ```upsert_documents_parallel``` for the second half."
+    "We will upsert data to the index, ```tutorial_index```, using the ```upsert``` method for the first half, and with ```upsert_parallel``` for the second half."
    ]
   },
   {
