fix : 대문자 수정!

--- a/01-Basic/07-LCEL-Interface.ipynb
+++ b/01-Basic/07-LCEL-Interface.ipynb
@@ -23,7 +23,7 @@
         "\n",
         "- [Overview](#overview)\n",
         "- [Environment Setup](#environment-setup)\n",
-        "- [LCEL Runnable Protocol](#LCEL-Runnable-Protocol)\n",
+        "- [LCEL Runnable Protocol](#lcel-runnable-protocol)\n",
         "- [stream: real-time output](#stream-real-time-output)\n",
         "- [Invoke](#invoke)\n",
         "- [batch: unit execution](#batch-unit-execution)\n",
